--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "clear && nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
