--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.18.2",
+    "express-validator": "^7.0.1",
+    "firebase": "^10.8.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.1",
     "sequelize": "^6.35.2",
