--- a/Server/package.json
+++ b/Server/package.json
@@ -13,14 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "cors": "2.8.5",
+    "dotenv": "16.4.5",
     "express": "4.18.2",
-    "express-validator": "^7.0.1",
-    "firebase": "^10.8.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.1",
-    "sequelize": "^6.35.2",
-    "sequelize-cli": "^6.6.2"
+    "express-validator": "7.0.1",
+    "firebase": "10.8.0",
+    "morgan": "1.10.0",
+    "multer": "1.4.5-lts.1",
+    "mysql2": "3.9.1",
+    "sequelize": "6.35.2",
+    "sequelize-cli": "6.6.2"
   },
   "devDependencies": {
     "nodemon": "3.0.3"
